--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "modul",
+  "name": "task_webpack",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run cleanup && webpack --mode=development",
+    "build": "npm run cleanup && webpack --mode=production",
+    "cleanup": "rimraf dist/*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "howler": "^2.2.3"
+    "luxon": "^2.0.2",
+    "rimraf": "^3.0.2"
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {
+    "css-loader": "^6.3.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.54.0",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
+  }
 }
